--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
         "psr-4": {
             "App\\": "app/",
             "Catnip\\": "catnip/",
-            "Models\\": "models/"
+            "Models\\": "models/",
+            "Plugins\\": "plugins/"
         }
-        
     }
 }
