--- a/locito-base/composer.json
+++ b/locito-base/composer.json
@@ -1,10 +1,15 @@
-{
-    
+{   
     "require": {
         "symfony/console": "^5.3",
         "symfony/process": "^5.3"
     },
     "autoload": {
-      "classmap": ["Commands"]
+      "classmap": ["Commands"],
+      "psr-4": {
+        "App\\": "../app/",
+        "Catnip\\": "../catnip/",
+        "Plugins\\": "../plugins/"
+      }
     }
+    
 }
