--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,8 @@
 {
+    "name": "rowadigital/catnip",
+    "license": "RWL",
+    "type": "framework",
+    "description": "The standart version of the Catnip Framework",
     "autoload": {
         "psr-4": {
             "App\\": "app/",
