--- a/plugins/Google/composer.json
+++ b/plugins/Google/composer.json
@@ -1,7 +1,7 @@
 {
     
     "require": {
-        "google/apiclient": "2.0"
+        "google/apiclient": "2.0^"
     },
     "autoload": {
         "classmap": [
